# h5-tournaments-services

h5-tournaments-api/: .env  .gitignore  Cargo.toml
h5-tournaments-api/.shuttle/: config.toml
h5-tournaments-api/src/: lib.rs  main.rs  prelude.rs
h5-tournaments-api/src/graphql/: mutation.rs  query.rs
h5-tournaments-api/src/routes/: mod.rs  models.rs  prelude.rs  tournament.rs
h5-tournaments-api/src/services/: mod.rs
h5-tournaments-api/src/services/tournament/: error.rs  mod.rs  prelude.rs  service.rs  types.rs
h5-tournaments-api/src/services/tournament/models/: game_builder.rs  hero.rs  heroes.rs  match_structure.rs  mod.rs  operator.rs  organizer.rs  participant.rs  race.rs  tournament.rs  tournament_builder.rs  user.rs
h5-tournaments-api/src/tournament/: core.rs  management.rs  mod.rs  statistics.rs  utils.rs
h5-tournaments-api/src/utils/: queries.rs
h5-tournaments-bot/: Cargo.toml
h5-tournaments-bot/src/: commands.rs  main.rs
h5-tournaments-bot/src/api_connector/: service.rs
h5-tournaments-bot/src/builders/: mod.rs  report_message.rs  tournament_creation.rs  types.rs
h5-tournaments-bot/src/event_handler/: mod.rs
h5-tournaments-bot/src/graphql/: queries.rs  schema.json
h5-tournaments-bot/src/graphql/queries/: create_game.graphql  create_games_bulk.graphql  create_match.graphql  create_organizer.graphql  create_participant.graphql  create_tournament.graphql  create_tournament_builder.graphql  create_user.graphql  delete_participant.graphql  games_count.graphql  get_game.graphql  get_games.graphql  get_hero.graphql  get_heroes.graphql  get_match.graphql  get_operator.graphql  get_operator_data.graphql  get_operator_section.graphql  get_organizer.graphql  get_participant.graphql  get_participants.graphql  get_tournament.graphql  get_tournament_builder.graphql  get_tournament_users.graphql  get_tournaments.graphql  get_user.graphql  get_users.graphql  update_game.graphql  update_match.graphql  update_participants_bulk.graphql  update_tournament.graphql  update_tournament_builder.graphql  update_user.graphql  update_users_bulk.graphql
h5-tournaments-bot/src/operations/: administration.rs  error.rs  mod.rs  registration.rs  report_creation.rs
h5-tournaments-bot/src/parser/: commands.rs  mod.rs  service.rs  source.rs  types.rs  utils.rs
h5-tournaments-bot/src/services/: mod.rs  service.rs
h5-tournaments-bot/src/services/challonge/: payloads.rs  service.rs  types.rs
h5-tournaments-bot/src/services/h5_tournaments/: mod.rs  payloads.rs  service.rs
h5-tournaments-bot/src/types/: payloads.rs
h5-tournaments-manager/: index.html  package-lock.json  package.json
h5-tournaments-manager/src/: App.tsx
h5-tournaments-manager/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
h5-tournaments-manager/src-tauri/h5-stats-generator/: Cargo.toml
h5-tournaments-manager/src-tauri/h5-stats-generator/src/: lib.rs  main.rs  utils.rs
h5-tournaments-manager/src-tauri/h5-stats-generator/src/builder/: mod.rs  pair.rs  player.rs  race.rs  styles.rs
h5-tournaments-manager/src-tauri/h5-stats-types/: Cargo.toml
h5-tournaments-manager/src-tauri/h5-stats-types/src/: lib.rs
h5-tournaments-manager/src-tauri/src/: lib.rs  main.rs
h5-tournaments-manager/src-tauri/src/tournament/: commands.rs  utils.rs
h5-tournaments-manager/src/common/: types.ts
h5-tournaments-manager/src/components/: GameRenderer.tsx  MatchesList.tsx  TournamentsLoader.tsx
h5-tournaments-manager/src/stores/: GamesStore.ts  HeroesStore.ts  MatchesStore.ts  RacesStore.ts  TournamentsStore.ts
