[package]
name = "h5-tournaments-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.47.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.47.0"
tracing = "0.1.37"
tokio = "1.26.0"
reqwest = {version =  "0.12.7", features = ["json"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["strum_macros"] }
sqlx = { version = "0.7.4", features = ["postgres", "json", "runtime-tokio", "uuid"] }
uuid = { version = "1.10.0", features = ["v4"] }
human_regex = "0.3.0"
