[package]
name = "h5-tournaments-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "h5_tournaments_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.8", features = ["json"] }
uuid = {version = "1.10.0", features = ["v4"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros"] }
h5-stats-types = { path = "h5-stats-types/" }
h5-stats-generator = { path = "h5-stats-generator/" }
